   * show leader's name and colour at status table even when that team is fogged
     (patch #605)A
   * changed the zoom hotkeys from 'z', 'x' and 'c' to '+', '-' and '0'
   * fix the completion when controlling multiple sides (bug #8101, patch #653)
   * smarter focus handling when user input is irrelevant to the current focus
     but relevant to another widget
   * fix the "keylogger" effect when joining the MP Lobby
 * friends list
   * added a friend list in MP lobby, they will display a special icon in lobby,
     and you can be warned when they join the lobby even when not receiving
     lobby joins
   * added an option to specify what you want to see as joins: all, friends,
     none
   * added a sub tab of multiplayer to the preferences menu to view and edit
     your friends and ignores list
   * if you choose to sort the lobby list your current login name will be
     displayed on the top of the list
 * WML engine
   * added location range filter to [filter_location] in standard unit filter.
   * added prerecruit event that takes place after the unit is created but
     before it is displayed.
   * added ability to define color ranges and palettes in scenario, units, and
     unit modification effects.  Added ability to add image modifications in a
     unit modification [effect] tag
   * SUF can now filter on anything that is also available throught unit
     variables, using a [wml_filter] block
   * overhaul of team coloring engine.  Now possible to apply multiple TC to an
     image.
   * added fourth color in team_rgb definitions for representative color in
     minimap
   * added a 'hide_help' key that prevents a unit type from being listed in the
     in-game help (bug #5701)
   * added an 'allow_new_game' key (default=yes) to prevent [multiplayer]
     scenarios from showing up in the multiplayer game creation interface
     (FR #6397)
   * new [set_specials] tag to allow custom specials in [effect] tags